--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,10 +9,15 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
-    <string name="menu_tools">Tools</string>
-    <string name="menu_share">Share</string>
-    <string name="menu_send">Send</string>
+    <string name="bottomMenu_video">Video</string>
+    <string name="bottomMenu_knowledge">Wissen</string>
+    <string name="bottomMenu_dept">Schulden</string>
+    <string name="bottomMenu_jokes">Witze</string>
+
+    <string-array name="bottomMenuItems">
+        <item>@string/bottomMenu_video</item>
+        <item>@string/bottomMenu_knowledge</item>
+        <item>@string/bottomMenu_dept</item>
+        <item>@string/bottomMenu_jokes</item>
+    </string-array>
 </resources>
