--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name="bottomMenu_owe">Schulden</string>
     <string name="bottomMenu_joke">Witz</string>
     <string name="bottomMenu_jokes">Witze</string>
+    <string name="bottomMenu_show">Serie</string>
+    <string name="bottomMenu_shows">Serien</string>
 
     <string-array name="ownOrOther">
         <item>Fremde</item>
