Darsteller- und Studio-Bilder können nun auch manuell hinterlegt werden

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,12 @@
         <item>Eigene</item>
     </string-array>
 
+    <string-array name="languages">
+        <item>--</item>
+        <item>de</item>
+        <item>en</item>
+    </string-array>
+
     <string-array name="parserType">
         <item>@string/parserType_java</item>
         <item>@string/parserType_javaScript</item>
