--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">SecondMind</string>
     <string name="VideoActivity_label">Videos</string>
+    <string name="CollectionoActivity_label">Sammlungen</string>
     <string name="title_activity_delete">delete</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
