--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,10 @@
         <item>Edit</item>
         <item>Keine</item>
     </string-array>
+
+    <string-array name="showEpisodePreview">
+        <item>Immer</item>
+        <item>Gesehen</item>
+        <item>Nie</item>
+    </string-array>
 </resources>
