--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,10 @@
         <item>Gesehen</item>
         <item>Nie</item>
     </string-array>
+
+    <string-array name="requestImdbIdType">
+        <item>Trakt</item>
+        <item>Staffel</item>
+        <item>Vorheriger</item>
+    </string-array>
 </resources>
