--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,6 +54,7 @@
     </string-array>
 
     <string-array name="requestImdbIdType">
+        <item>TMDB</item>
         <item>Trakt</item>
         <item>Staffel</item>
         <item>Vorheriger</item>
