--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,6 +76,11 @@
         <item>_Jahre</item>
     </string-array>
 
+    <string-array name="logicConnectors">
+        <item>&amp;</item>
+        <item>|</item>
+    </string-array>
+
     <string-array name="videoClickMode">
         <item>Details</item>
         <item>Internet</item>
