Coloration in AdvancedQueryHelper finished Medien können mit und von der App geteilt werden OnSwipeTouchListener bugs behoben

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,6 +58,7 @@
     <string-array name="requestImdbIdType">
         <item>TMDB</item>
         <item>Trakt</item>
+        <item>TVDB</item>
         <item>Staffel</item>
         <item>Vorheriger</item>
     </string-array>
