Doku zu CustomCode_Video hinzugefügt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,6 +90,7 @@
     <string-array name="customCodeReturnTypes">
         <item>Text</item>
         <item>List</item>
+        <item>Gruppierte Liste</item>
         <item>Statistic</item>
     </string-array>
 </resources>
