CustomCode verbessert (getAllViews(), toGroup(), df() und buttons)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,8 +89,9 @@
 
     <string-array name="customCodeReturnTypes">
         <item>Text</item>
-        <item>List</item>
+        <item>Liste</item>
         <item>Gruppierte Liste</item>
+        <item>Code</item>
         <item>Statistic</item>
     </string-array>
 </resources>
